fixing log monets